fix: bouncing background on mobile view

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -29,14 +29,14 @@ body {
   height: 100%;
   position: absolute;
   .background {
-    height: 100%;
+    height: 1000px;
     position: fixed;
     left: 0;
     right: 0;
     background-image: url("../images/bookshelf.jpg");
-    background-repeat: repeat;
-    background-position: left;
-    background-size: 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
     filter: blur(3px);
     z-index: -1;
   }
